--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,4 +10,15 @@ nav a {
 .pokeImg {
   height: 20vh; }
 
+.allPokesFromAPI {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-around;
+  line-height: 1.7rem; }
+
+.pokesFromAllThePokesLink {
+  font-size: 1rem;
+  margin-right: 1vw; }
+
 /*# sourceMappingURL=style.css.map */
